...
    func scene(_ scene: UIScene, willConnectTo session: UISceneSession, options connectionOptions: UIScene.ConnectionOptions) {
        // Use this method to optionally configure and attach the UIWindow `window` to the provided UIWindowScene `scene`.
        // If using a storyboard, the `window` property will automatically be initialized and attached to the scene.
        // This delegate does not imply the connecting scene or session are new (see `application:configurationForConnectingSceneSession` instead).
        guard let windowScene = (scene as? UIWindowScene) else { return }
        
        let stocks = ["NVDA", "AMZN", "NFLX", "TSLA", "FB", "MSFT", "GOOG", "AAPL", "NKE", "SBUX", "BABA", "PYPL", "AMD", "CRM", "INTC", "EA", "ATVI", "YELP", "TIVO", "ZG", "TTD"]
        let stockListVC = StockListTableViewController(stocks: stocks, style: .plain)
        
        // Override point for customization after application launch.
        window = UIWindow(frame: windowScene.coordinateSpace.bounds)
        window?.windowScene = windowScene
        window?.makeKeyAndVisible()
...
