...
    lazy var priceView : StockDetailPriceView = {
        let view = StockDetailPriceView(with: stock.displayTextForPrice(), and: stock.displayTextForPriceChange(), and: stock.change)
        return view
    }()
    
    lazy var stockDetailStackView : UIStackView = {
        let open = StockDetailPairedLabelView(with: "Open", and: String(format: "%.2f", stock.open))
        let high = StockDetailPairedLabelView(with: "High", and: String(format: "%.2f", stock.high))
        let low = StockDetailPairedLabelView(with: "Low", and: String(format: "%.2f", stock.low))
        let volume = StockDetailPairedLabelView(with: "Volume", and: String(stock.volume))
        let prevClose = StockDetailPairedLabelView(with: "Prev Close", and: String(format: "%.2f", stock.previousClose))
        
        let view = UIStackView(arrangedSubviews: [open, high, low, volume, prevClose, dateLabel, UIView()])
...
